# time_logger

./: .gitignore  README.md  aquarium  db_init.sql  donut.ipynb  donut_example.ipynb  logged_entries  pyproject.toml  test.ipynb
cee243/: cee243.ipynb
cee243/data/: cee243_peer_responses.csv
cee243/output_files/: group_1.md  group_10.md  group_2.md  group_3.md  group_4.md  group_5.md  group_6.md  group_7.md  group_8.md  group_9.md
data_plan/: er_diagram_low_level.md
db_creators/: create.sql  init.sql
db_plan/: er_diagram.md
src/: app.py  conversion_helpers.py  database_creation.py  date_helpers.py  db_create.sql  db_interact.py  helpers.py  interfaces.py  prompts.py  report.py  test.ipynb  test.py  variables.py
src/db_commands/: __init__.py  connect.py  entry.py  read.py  test2.ipynb
