[tool.poetry]
name = "time-logger"
version = "0.1.0"
description = ""
authors = ["Juliet Nwagwu Ume-Ezeoke <jnwagwu@stanford.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
polars = "^1.12.0"
rich = "^13.9.4"
typer = "^0.13.0"
beaupy = "^3.9.2"
mdutils = "^1.6.0"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
